[package]
name = "fdup"
version = "0.1.0"
authors = ["Jack <jchoi5@me.com>"]
edition = "2018"
description = "find duplicate files recursively"
repository = "https://github.com/jchoi5me/fdup"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
sha2 = "0.8.0"
walkdir = "2"
