[package]
name = "fdup"
version = "2.0.2"
authors = ["Jack <jackwchoi@pm.me>"]
edition = "2018"
description = "find duplicate files recursively"
repository = "https://github.com/jchoi5me/fdup"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colmac = "0.1.1"
rayon = "1.1"
sha2 = "0.8.0"
structopt = "0.2"
walkdir = "2"
